removed the java hello alert and filled in the links for footer

--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
   <body>
     <h1>World Clock</h1>
     <footer>
-      This project was coded by <a href="#" target="_blank">Sara Ismaeel</a> and
-      is open-sourced on
-      <a href="#" target="_blank">GitHub</a>
+      🌍 This project was coded by
+      <a href="https://github.com/taffydesu" target="_blank">Sara Ismaeel</a>
+      and is open-sourced on
+      <a href="https://github.com/taffydesu/world-clock" target="_blank"
+        >GitHub 🌏</a
+      >
     </footer>
     <script src="javascript/index.js"></script>
   </body>
