--- a/index.html
+++ b/index.html
@@ -7,7 +7,41 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <h1>World Clock</h1>
+    <div class="container">
+      <h1>World Clocks</h1>
+      <select>
+        <option value="">Select a city...</option>
+        <option value="">London</option>
+        <option value="">Tokyo</option>
+        <option value="">Manama</option>
+        <option value="">New York</option>
+      </select>
+
+      <div class="city">
+        <h2>London 🇬🇧</h2>
+        <div class="date">August 15th 2022</div>
+        <div class="time">14:10:30</div>
+      </div>
+
+      <div class="city">
+        <h2>Tokyo 🇯🇵</h2>
+        <div class="date">August 15th 2022</div>
+        <div class="time">14:10:30</div>
+      </div>
+
+      <div class="city">
+        <h2>Manama 🇧🇭</h2>
+        <div class="date">August 15th 2022</div>
+        <div class="time">14:10:30</div>
+      </div>
+
+      <div class="city">
+        🇺
+        <h2>New York 🇺🇸</h2>
+        <div class="date">August 15th 2022</div>
+        <div class="time">14:10:30</div>
+      </div>
+    </div>
     <footer>
       🌍 This project was coded by
       <a href="https://github.com/taffydesu" target="_blank">Sara Ismaeel</a>
