added css and modified some html

--- a/index.html
+++ b/index.html
@@ -8,43 +8,44 @@
   </head>
   <body>
     <div class="container">
-      <h1>World Clocks</h1>
+      <h1>🌍 World Clocks 🌏</h1>
       <select>
         <option value="">Select a city...</option>
-        <option value="">London</option>
-        <option value="">Tokyo</option>
-        <option value="">Manama</option>
-        <option value="">New York</option>
+        <option value="">London 🇬🇧</option>
+        <option value="">Tokyo 🇯🇵</option>
+        <option value="">Manama 🇧🇭</option>
+        <option value="">New York 🇺🇸</option>
       </select>
 
       <div class="city">
-        <h2>London 🇬🇧</h2>
-        <div class="date">August 15th 2022</div>
+        <div>
+          <h2>London 🇬🇧</h2>
+          <div class="date">Feburary 7th 2023</div>
+        </div>
         <div class="time">14:10:30</div>
       </div>
 
       <div class="city">
-        <h2>Tokyo 🇯🇵</h2>
-        <div class="date">August 15th 2022</div>
+        <div>
+          <h2>Tokyo 🇯🇵</h2>
+          <div class="date">Feburary 7th 2023</div>
+        </div>
         <div class="time">14:10:30</div>
       </div>
 
       <div class="city">
-        <h2>Manama 🇧🇭</h2>
-        <div class="date">August 15th 2022</div>
-        <div class="time">14:10:30</div>
-      </div>
-
-      <div class="city">
-        🇺
-        <h2>New York 🇺🇸</h2>
-        <div class="date">August 15th 2022</div>
+        <div>
+          <h2>Manama 🇧🇭</h2>
+          <div class="date">Feburary 7th 2023</div>
+        </div>
         <div class="time">14:10:30</div>
       </div>
     </div>
     <footer>
       🌍 This project was coded by
-      <a href="https://github.com/taffydesu" target="_blank">Sara Ismaeel</a>
+      <a href="https://github.com/taffydesu" target="_blank"
+        ><strong>Sara Ismaeel</strong></a
+      >
       and is open-sourced on
       <a href="https://github.com/taffydesu/world-clock" target="_blank"
         >GitHub 🌏</a
