--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.45/moment-timezone-with-data-1970-2030.min.js"></script>
     <title>World Clock - Sara Ismaeel</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
@@ -17,28 +19,36 @@
         <option value="">New York 🇺🇸</option>
       </select>
 
-      <div class="city">
+      <div class="city" id="london">
         <div>
           <h2>London 🇬🇧</h2>
-          <div class="date">Feburary 7th 2023</div>
+          <div class="date"></div>
         </div>
-        <div class="time">14:10:30</div>
+        <div class="time"></div>
       </div>
 
-      <div class="city">
+      <div class="city" id="tokyo">
         <div>
           <h2>Tokyo 🇯🇵</h2>
-          <div class="date">Feburary 7th 2023</div>
+          <div class="date"></div>
         </div>
-        <div class="time">14:10:30</div>
+        <div class="time"></div>
       </div>
 
-      <div class="city">
+      <div class="city" id="manama">
         <div>
           <h2>Manama 🇧🇭</h2>
-          <div class="date">Feburary 7th 2023</div>
+          <div class="date"></div>
         </div>
-        <div class="time">14:10:30</div>
+        <div class="time"></div>
+      </div>
+
+      <div class="city" id="new-york">
+        <div>
+          <h2>New York 🇺🇸</h2>
+          <div class="date"></div>
+        </div>
+        <div class="time"></div>
       </div>
     </div>
     <footer>
