--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
       <select id="city">
         <option value="">Select a city...</option>
-        <option value="Asia/Bahrain" "🇧🇭">Bahrain 🇧🇭</option>
+        <option value="current">My current Location!</option>
+        <option value="Asia/Bahrain">Bahrain 🇧🇭</option>
         <option value="Europe/London">London 🇬🇧</option>
         <option value="Europe/Moscow">Moscow 🇷🇺</option>
         <option value="America/New_York">New York 🇺🇸</option>
