changed from sweden to stockholm

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <option value="Europe/Moscow">Moscow 🇷🇺</option>
         <option value="America/New_York">New York 🇺🇸</option>
         <option value="America/Sao_Paulo">Sao Paulo 🇧🇷</option>
-        <option value="Europe/Stockholm">Sweden 🇸🇪</option>
+        <option value="Europe/Stockholm">Stockholm 🇸🇪</option>
         <option value="Australia/Sydney">Sydney 🇦🇺</option>
         <option value="Asia/Tehran">Tehran 🇮🇷</option>
         <option value="Asia/Tokyo">Tokyo 🇯🇵</option>
