--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <option value="">Select a city...</option>
         <option value="current">My current Location!</option>
         <option value="Asia/Bahrain">Bahrain 🇧🇭</option>
+        <option value="Europe/Dublin">Dublin 🇮🇪</option>
         <option value="Europe/London">London 🇬🇧</option>
         <option value="Europe/Moscow">Moscow 🇷🇺</option>
         <option value="America/New_York">New York 🇺🇸</option>
